*SVN*

* Changing the :default Date format doesn't break date quoting.  #6312 [bshand, Elias]

* Allow nil serialized attributes with a set class constraint. #7293 [sandofsky]

* belongs_to assignment creates a new proxy rather than modifying its target in-place.  #8412 [mmangino@elevatedrails.com]

* Fix column type detection while loading fixtures.  Closes #7987 [roderickvd]

* Document deep eager includes.  #6267 [Josh Susser, Dan Manges]

* Oracle: extract column length for CHAR also.  #7866 [ymendel]

* Small additions and fixes for ActiveRecord documentation.  Closes #7342 [jeremymcanally]

* SQLite: binary escaping works with $KCODE='u'.  #7862 [tsuka]

* Improved cloning performance by relying less on exception raising #8159 [Blaine]


*1.15.3* (March 12th, 2007)

* Allow a polymorphic :source for has_many :through associations. Closes #7143 [protocool] 

* Consistently quote primary key column names.  #7763 [toolmantim]

* Fixtures: fix YAML ordered map support.  #2665 [Manuel Holtgrewe, nfbuckley]

* Fix has_many :through << with custom foreign keys.  #6466, #7153 [naffis, Rich Collins]


*1.15.2* (February 5th, 2007)

* Pass a range in :conditions to use the SQL BETWEEN operator.  #6974 [dcmanges]
    Student.find(:all, :conditions => { :grade => 9..12 })

* Don't create instance writer methods for class attributes. [Rick]

* When dealing with SQLite3, use the table_info pragma helper, so that the bindings can do some translation for when sqlite3 breaks incompatibly between point releases. [Jamis Buck]

* SQLServer: don't choke on strings containing 'null'.  #7083 [Jakob S]

* Consistently use LOWER() for uniqueness validations (rather than mixing with UPPER()) so the database can always use a functional index on the lowercased column.  #6495 [Si]

* MySQL: SET SQL_AUTO_IS_NULL=0 so 'where id is null' doesn't select the last inserted id.  #6778 [Jonathan Viney, timc]
